<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="20dp"
        android:elevation="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">
        <!-- Device Name-->
        <TextView
            android:id="@+id/devicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/changa_semibold"
            android:text="@string/device_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- First  Switch-->
        <androidx.cardview.widget.CardView
            android:id="@+id/sw1_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="false">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                app:showText="true"
                app:track="@drawable/track"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal|end"
                android:text="@string/device1"
                android:textColor="#FBFBFB"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <!-- Second Switch-->

        <androidx.cardview.widget.CardView
            android:id="@+id/sw2_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="125dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                app:showText="true"
                app:track="@drawable/track"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal|end"
                android:text="@string/device2"
                android:textColor="#FBFBFB"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <!-- Third Switch-->
        <androidx.cardview.widget.CardView
            android:id="@+id/sw3_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="190dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="false">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                app:showText="true"
                app:track="@drawable/track"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal|end"
                android:text="@string/device3"
                android:textColor="#FBFBFB"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
        <!-- Fourth Switch-->
        <androidx.cardview.widget.CardView
            android:id="@+id/sw4_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="255dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="false">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                app:showText="true"
                app:track="@drawable/track"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal|end"
                android:text="@string/device4"
                android:textColor="#FBFBFB"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
        <!-- Fifth Switch-->
        <androidx.cardview.widget.CardView
            android:id="@+id/sw5_view"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="320dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="false">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="18dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                app:showText="true"
                app:track="@drawable/track"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal|end"
                android:text="@string/device5"
                android:textColor="#FBFBFB"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fanspeed_val"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/aldrich"
                android:gravity="end"
                android:text="@string/fan_speed"
                android:textColor="#FBFBFB"
                android:textSize="18sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/fanslider"
                android:layout_width="230dp"
                android:layout_height="37dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="6dp"
                android:value="20.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="#2196F3"
                app:trackColor="@color/teal_200"
                app:trackColorActive="#2196F3"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
        <!-- Result Switch-->
        <androidx.cardview.widget.CardView
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="430dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/Navy"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:id="@+id/result_stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/aldrich"
                android:gravity="start|center_horizontal"
                android:text="Status : "
                android:textColor="#FBFBFB"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ipadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="510dp"
            android:fontFamily="@font/aldrich"
            android:gravity="start|center_horizontal"
            android:text="Last IP : "
            android:textColor="@color/DarkSlateGray"
            android:textSize="14sp"
            android:paddingBottom="10dp"/>

        <ImageView
            android:id="@+id/img_dev_stat"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/red_dot" />
    </androidx.cardview.widget.CardView>
    </RelativeLayout>